--- a/html/eu-posso-ouvir-o-oceano.html
+++ b/html/eu-posso-ouvir-o-oceano.html
@@ -44,6 +44,7 @@
 	<style>
 		.div-box{
 			background-image: url("../covers/cover-9.jpg");
+			background-position: right;
 		}
 	</style>
 
@@ -63,7 +64,7 @@
 					<div class="container-out">
 					    <div class="search-container">
 					        <form id="search-engine">
-						        <input id="search" type="text" autocomplete="off" onblur="desfocus()" autofocus name="filmes">
+						        <input id="search" type="text" autocomplete="off" onblur="desfocus()" placeholder="Pesquisar" autofocus name="filmes">
 						        <input id="search_submit" type="submit">
 						        <div id="search-results"></div>
 					        </form>				     
