--- a/html/meus-vizinhos.html
+++ b/html/meus-vizinhos.html
@@ -175,7 +175,7 @@
 				<p>A trilha sonora foi composta por Akiko Yano e é caracterizada por temas bem curtos para piano. Há também peças clássicas tocadas pela Orquestra de Câmara Filarmônica Tcheca, conduzidas por Mario Klemens. Foi lançada pela Tokuma em 1 de julho de 1999.</p>
 			</div>
 
-			<div class="div-wrap">
+			<div class="div-wrap" id="div-wrap-assista">
 				<h3>Assista em</h3>
 				<a href="https://www.netflix.com/br/title/70035035"><img class="icon" alt="Netflix" src="../icons/netflix.png">
 				</a>
