--- a/html/a-viagem-de-chihiro.html
+++ b/html/a-viagem-de-chihiro.html
@@ -175,7 +175,7 @@
 				<iframe style="border-radius:12px; width: 100%; height: 380px;" title="Playlist da Trilha Sonora no Spotify" src="https://open.spotify.com/embed/album/766a5fKJYFy9ii4Kz2bQy9?utm_source=generator"  allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 			</div>
 
-			<div class="div-wrap">
+			<div class="div-wrap" id="div-wrap-assista">
 				<h3>Assista em</h3>
 				<a href="https://www.netflix.com/br/title/60023642"><img class="icon" alt="Netflix" src="../icons/netflix.png"></a>
 			</div>
