--- a/html/contos-de-terramar.html
+++ b/html/contos-de-terramar.html
@@ -171,7 +171,7 @@
 				<iframe style="border-radius:12px; width: 100%; height: 380px;" src="https://open.spotify.com/embed/album/66P1f9J3PbfNKk0YXHYMyf?utm_source=generator" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 			</div>
 
-			<div class="div-wrap">
+			<div class="div-wrap" id="div-wrap-assista">
 				<h3>Assista em</h3>
 				<a href="https://www.netflix.com/br/title/70142821"><img class="icon" alt="Netflix" src="../icons/netflix.png">
 				</a>
