--- a/html/o-castelo-animado.html
+++ b/html/o-castelo-animado.html
@@ -181,7 +181,7 @@
 				<iframe style="border-radius:12px; width: 100%; height: 380px;" src="https://open.spotify.com/embed/album/5fqlZFKYqvkIe2jdDGt2nl?utm_source=generator"  allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 			</div>
 
-			<div class="div-wrap">
+			<div class="div-wrap" id="div-wrap-assista">
 				<h3>Assista em</h3>
 				<a href="https://www.netflix.com/br/title/70028883"><img class="icon" alt="Netflix" src="../icons/netflix.png">
 				</a>
