--- a/html/o-conto-da-princesa-kaguya.html
+++ b/html/o-conto-da-princesa-kaguya.html
@@ -176,7 +176,7 @@
 				<iframe style="border-radius:12px; width: 100%; height: 380px;" src="https://open.spotify.com/embed/album/0RkkwrIWDzsYSw11lmhNYx?utm_source=generator"  allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 			</div>
 
-			<div class="div-wrap">
+			<div class="div-wrap" id="div-wrap-assista">
 				<h3>Assista em</h3>
 				<a href="https://www.netflix.com/br/title/80013552"><img class="icon" alt="Netflix" src="../icons/netflix.png">
 				</a>
