--- a/html/o-reino-dos-gatos.html
+++ b/html/o-reino-dos-gatos.html
@@ -175,7 +175,7 @@
 				<iframe style="border-radius:12px; width: 100%; height: 380px;" src="https://open.spotify.com/embed/album/1KDCap6BtIiJsmvilIA9oG?utm_source=generator" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 			</div>
 
-			<div class="div-wrap">
+			<div class="div-wrap" id="div-wrap-assista">
 				<h3>Assista em</h3>
 				<a href="https://www.netflix.com/br/title/70019058"><img class="icon" alt="Netflix" src="../icons/netflix.png">
 				</a>
