--- a/html/sussurros-do-coracao.html
+++ b/html/sussurros-do-coracao.html
@@ -177,7 +177,7 @@
 				<iframe style="border-radius:12px; width: 100%; height: 380px;" src="https://open.spotify.com/embed/album/0yOhYn348rz2j3mUne0fpH?utm_source=generator"  allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 			</div>
 
-			<div class="div-wrap">
+			<div class="div-wrap"  id="div-wrap-assista">
 				<h3>Assista em</h3>
 				<a href="https://www.netflix.com/br/title/70045021"><img class="icon" alt="Netflix" src="../icons/netflix.png">
 				</a>
