--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 				<div class="container-out">
 				    <div class="search-container">
 				        <form id="search-engine">
-					        <input id="search" type="text" autocomplete="off" onblur="desfocus()" autofocus name="filmes">
+					        <input id="search" type="text" autocomplete="off" onblur="desfocus()" autofocus placeholder="Pesquisar" name="filmes">
 					        <input id="search_submit" type="submit" name="abre ou limpa">
 					        <div id="search-results"></div>
 				        </form>				     
