--- a/html/o-reino-dos-gatos.html
+++ b/html/o-reino-dos-gatos.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">	
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Studio Ghibli">
-	<meta name="author" content="Crislaney & Fernanda">
+	<meta name="author" content="Crislanne & Fernanda">
 
 	<title>O Reino dos Gatos</title>
 
@@ -190,7 +190,7 @@
 			
 		</div>
 		<div id="texto-rodape">
-			<p>Textos e Informações retirados da Wikipedia e do site Studio Ghibli Brasil | Criado por Fernanda & Crislaney | 2022</p>
+			<p>Textos e Informações retirados da Wikipedia e do site Studio Ghibli Brasil | Criado por Fernanda & Crislanne | 2022</p>
 		</div>
 	</footer>
 
