--- a/html/o-conto-da-princesa-kaguya.html
+++ b/html/o-conto-da-princesa-kaguya.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">	
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Studio Ghibli">
-	<meta name="author" content="Crislaney & Fernanda">
+	<meta name="author" content="Crislanne & Fernanda">
 
 	<title>O Conto da Princesa Kaguya</title>
 
@@ -192,7 +192,7 @@
 			<img src="../icons/logo1.png" id="imagem-logo2" alt="susuwatari">			
 		</div>
 		<div id="texto-rodape">
-			<p>Textos e Informações retirados da Wikipedia e do site Studio Ghibli Brasil | Criado por Fernanda & Crislaney | 2022</p>
+			<p>Textos e Informações retirados da Wikipedia e do site Studio Ghibli Brasil | Criado por Fernanda & Crislanne | 2022</p>
 		</div>
 	</footer>
 
