--- a/html/a-viagem-de-chihiro.html
+++ b/html/a-viagem-de-chihiro.html
@@ -39,7 +39,6 @@
 	<!-- Css e JavaScript -->
 	<link href="../css/style-filmes.css" rel="stylesheet">
 	<link href="../assets/bootstrap.min.css" rel="stylesheet">
-	<script src="../assets/bootstrap.bundle.min.js"></script>
 
 	<style>
 		.div-box{
@@ -64,7 +63,7 @@
 					    <div class="search-container">
 					        <form id="search-engine">
 						        <input id="search" type="text" autocomplete="off" onblur="desfocus()" placeholder="Pesquisar" autofocus name="filmes">
-						        <input id="search_submit" type="submit" name="abre ou limpa">
+						        <input id="search_submit" type="button" name="abre ou limpa">
 						        <div id="search-results"></div>
 					        </form>				     
 					        <div id="search-data"></div>
@@ -194,4 +193,6 @@
 	</footer>
 
 	<script src="../js/javascript.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	<script src="../assets/bootstrap.bundle.min.js"></script>
 </html> 
