--- a/index.html
+++ b/index.html
@@ -39,11 +39,10 @@
 	<!-- Css e JavaScript -->
 	<link href="css/style.css" rel="stylesheet">
 	<link href="assets/bootstrap.min.css" rel="stylesheet">
-	<script src="assets/bootstrap.bundle.min.js"></script>
+	
 </head>
 
-<body>
-
+<body>	
 	<header>
 		<!-- Navegador -->
 		<nav class="navbar" aria-label="barra de navegação">
@@ -57,7 +56,7 @@
 				    <div class="search-container">
 				        <form id="search-engine">
 					        <input id="search" type="text" autocomplete="off" onblur="desfocus()" autofocus placeholder="Pesquisar" name="filmes">
-					        <input id="search_submit" type="submit" name="abre ou limpa">
+					        <input id="search_submit" type="button" name="abre ou limpa">
 					        <div id="search-results"></div>
 				        </form>				     
 				        <div id="search-data"></div>
@@ -252,6 +251,8 @@
 	</footer>
 	
 	<script src="js/javascript.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	<script src="assets/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
